--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.o
+mysh
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,eclipse,clion,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,eclipse,clion,visualstudio,visualstudiocode
 
