use cc variable

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,9 @@
+CC=gcc
+CFLAGS=
+
 mysh: shell.c interpreter.c shellmemory.c
-	gcc -c shell.c interpreter.c shellmemory.c
-	gcc -o mysh shell.o interpreter.o shellmemory.o
+	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c
+	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o
 
 clean: 
 	rm mysh; rm *.o
