Attempting code loading and pcb

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 CFLAGS=
 
-mysh: shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o
+mysh: shell.c interpreter.c shellmemory.c pcb.c
+	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c pcb.c
+	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o pcb.o
 
 clean: 
 	rm mysh; rm *.o
