Switched to official A2 solution

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 CFLAGS=
 
-mysh: shell.c interpreter.c shellmemory.c pcb.c
-	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c pcb.c
-	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o pcb.o
+mysh: shell.c interpreter.c shellmemory.c
+	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c kernel.c pcb.c ready_queue.c -lpthread
+	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o kernel.o pcb.o ready_queue.o
 
 clean: 
 	rm mysh; rm *.o
